--- a/css/style.scss
+++ b/css/style.scss
@@ -458,22 +458,33 @@ body {
             @media screen and (min-width: 1024px) {
                 display: flex;
                 flex-direction: column;
-                justify-content: center;
                 align-items: center;
-                // min-width: 1055px;
-                background-color: white;
+                // // min-width: 1055px;
+                // background-color: white;
 
-                .menu__header, .menu__body {
+                .menu__container {
                     max-width: 1055px;
                     width: 100%;
                 }
 
                 .menu__header {
-                    // justify-content: space-around;
+                    justify-content: center;
+
+                    .menu__title {
+                        padding-right: 50px;
+                    }
                 }
 
-                section {
-                    // width: max-content;
+                .menu__body{
+                    padding-left: 210.5px;
+                    padding-right: 210.5px;
+
+                    // .card {
+                    //     .card-content {
+                    //         display: flex;
+                    //         justify-content:end;
+                    //     }
+                    // }
                 }
             }
         }
