--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body .header .header__logo {
 }
 body .header .header__logo .header__back-button {
   position: absolute;
-  left: 20px;
+  left: 17px;
   color: #353535;
   font-size: 20px;
 }
@@ -67,16 +67,29 @@ body .header .location span {
   padding-left: 15px;
   font-family: "Roboto", sans-serif;
 }
+@media screen and (min-width: 1024px) {
+  body .header .header__logo {
+    height: 96.34px;
+  }
+  body .header .header__logo img {
+    padding: 0;
+    width: 100%;
+    height: 34.2px;
+  }
+}
 body main {
   background-color: #F6F6F6;
   padding-bottom: 50px;
 }
 body main .menu__page__image {
   height: 275px;
+  width: 100%;
 }
 @media screen and (min-width: 1024px) {
   body main .menu__page__image {
-    min-width: 1440px;
+    object-fit: cover;
+    max-width: 1440px;
+    width: 100%;
     height: 383px;
   }
 }
@@ -137,20 +150,19 @@ body main .fonctionnement .fonctionnement_list li span {
   position: absolute;
   display: flex;
   justify-content: center;
-  align-items: center;
   width: 24px;
   height: 24px;
   border-radius: 50%;
   background-color: #9356DC;
   color: white;
   text-align: center;
-  margin-right: 10px;
   left: -10px;
   font-size: 14.18px;
+  line-height: 26.62px;
 }
 body main .fonctionnement .fonctionnement_list li i {
   position: relative;
-  padding: 0 30px;
+  padding: 0 25px 0 40px;
   color: #7E7E7E;
   font-size: 19px;
   top: -3px;
@@ -175,7 +187,7 @@ body main .fonctionnement .fonctionnement_list li .fa-store {
   }
 }
 body main .restaurants {
-  padding: 20px;
+  padding: 20px 20px 0 20px;
   font-family: "Roboto", sans-serif;
 }
 @media screen and (min-width: 1024px) {
@@ -217,7 +229,7 @@ body main .card .card_tag {
   height: 29px;
   width: 24%;
   top: 13px;
-  left: 238px;
+  right: 13px;
   font-weight: 500;
   font-size: 14px;
   display: flex;
@@ -267,6 +279,7 @@ body main .card .checkmark {
   background-color: #99E2D0;
   text-align: center;
   transition: width 1s ease-in-out, opacity 1s ease-in-out;
+  max-width: 59px;
 }
 body main .card .checkmark i {
   color: white;
@@ -298,6 +311,29 @@ body main .menu .menu__body {
   padding: 0 13px;
   background-color: #F6F6F6;
   gap: 40px;
+}
+body main .menu .menu__body > * {
+  opacity: 0;
+}
+body main .menu .menu__body > *:nth-child(1) {
+  animation: fadeIn 3s ease-in-out 0.4s forwards;
+}
+body main .menu .menu__body > *:nth-child(2) {
+  animation: fadeIn 3s ease-in-out 0.8s forwards;
+}
+body main .menu .menu__body > *:nth-child(3) {
+  animation: fadeIn 3s ease-in-out 1.2s forwards;
+}
+body main .menu .menu__body > *:nth-child(4) {
+  animation: fadeIn 3s ease-in-out 1.6s forwards;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 body main .menu .menu__body section {
   display: flex;
@@ -335,6 +371,7 @@ body main .menu .menu__body .card .card-content {
 }
 body main .menu .menu__body .card .card-content .card-txt {
   transition: width 1s ease-in-out;
+  width: 100%;
 }
 body main .menu .menu__body .card .card-content .card-txt .card-title {
   font-weight: 500;
@@ -358,6 +395,7 @@ body main .menu .menu__body .card:hover .card-txt {
 body main .menu .menu__body .card:hover .checkmark {
   opacity: 1;
   width: 17%;
+  max-width: 59px;
 }
 body main .menu .menu__body .command_action {
   display: flex;
@@ -374,10 +412,12 @@ body main .menu .menu__body .command_action .action_button {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: white;
   }
   body main .menu .menu__container {
     max-width: 1055px;
     width: 100%;
+    background-color: #F6F6F6;
   }
   body main .menu .menu__header {
     justify-content: center;
@@ -388,6 +428,9 @@ body main .menu .menu__body .command_action .action_button {
   body main .menu .menu__body {
     padding-left: 210.5px;
     padding-right: 210.5px;
+  }
+  body main .menu .menu__body .command_action {
+    padding-bottom: 40px;
   }
 }
 body main .icon-button {
@@ -419,6 +462,7 @@ body main .icon-button:hover .icon-hover {
   opacity: 1;
 }
 body main .action_button {
+  position: relative;
   height: 50px;
   margin: 20px;
   border: none;
@@ -431,14 +475,34 @@ body main .action_button {
   width: 61%;
   height: 50px;
   cursor: pointer;
-  transition: background 3s ease-in-out;
+  overflow: hidden;
 }
-body main .action_button:hover {
+body main .action_button:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background: linear-gradient(#fface8, #bc95e9);
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+body main .action_button:hover:before {
+  opacity: 1;
+}
+body main .action_button div {
+  position: relative;
+  z-index: 2;
 }
 @media screen and (min-width: 1024px) {
   body main .action_button {
     max-width: 218px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  body main {
+    padding-bottom: 0;
   }
 }
 body .footer {
@@ -507,32 +571,6 @@ body .footer .footer_list .footer_last_links {
   }
   body .footer .footer_list li:nth-child(3) {
     padding-left: 30px;
-  }
-}
-body .menu, body .menu__header, body .menu__footer {
-  opacity: 0;
-}
-body .menu:nth-child(1), body .menu__header:nth-child(1), body .menu__footer:nth-child(1) {
-  animation: fadeIn 3s ease-in-out 0.2s forwards;
-}
-body .menu:nth-child(2), body .menu__header:nth-child(2), body .menu__footer:nth-child(2) {
-  animation: fadeIn 3s ease-in-out 0.4s forwards;
-}
-body .menu:nth-child(3), body .menu__header:nth-child(3), body .menu__footer:nth-child(3) {
-  animation: fadeIn 3s ease-in-out 0.6s forwards;
-}
-body .menu:nth-child(4), body .menu__header:nth-child(4), body .menu__footer:nth-child(4) {
-  animation: fadeIn 3s ease-in-out 0.8s forwards;
-}
-body .menu:nth-child(5), body .menu__header:nth-child(5), body .menu__footer:nth-child(5) {
-  animation: fadeIn 3s ease-in-out 1s forwards;
-}
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
   }
 }
 
