--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,11 @@ body main .presentation p {
     font-weight: 700;
     font-size: 40px;
     height: 47px;
+    margin-top: 0;
+    padding-bottom: 10px;
+  }
+  body main .presentation p {
+    margin-bottom: 10px;
   }
 }
 body main .fonctionnement {
@@ -177,13 +182,15 @@ body main .fonctionnement .fonctionnement_list li .fa-store {
   }
   body main .fonctionnement div {
     max-width: 1053px;
+    width: 100%;
   }
   body main .fonctionnement div .fonctionnement_list {
     flex-direction: row;
     gap: 30px;
+    width: 100%;
   }
   body main .fonctionnement div .fonctionnement_list li {
-    min-width: 335px;
+    width: 100%;
   }
 }
 body main .restaurants {
@@ -194,6 +201,7 @@ body main .restaurants {
   body main .restaurants {
     display: flex;
     justify-content: center;
+    padding: 10px 20px 30px 20px;
   }
   body main .restaurants div {
     max-width: 1080px;
@@ -202,6 +210,7 @@ body main .restaurants {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    padding-top: 10px;
     gap: 50px;
   }
   body main .restaurants div .restaurants__cards .card {
@@ -406,6 +415,7 @@ body main .menu .menu__body .command_action .action_button {
   width: 53%;
   height: 50px;
   padding: 0;
+  max-width: 186px;
 }
 @media screen and (min-width: 1024px) {
   body main .menu {
@@ -421,6 +431,7 @@ body main .menu .menu__body .command_action .action_button {
   }
   body main .menu .menu__header {
     justify-content: center;
+    padding-top: 50px;
   }
   body main .menu .menu__header .menu__title {
     padding-right: 50px;
@@ -428,9 +439,12 @@ body main .menu .menu__body .command_action .action_button {
   body main .menu .menu__body {
     padding-left: 210.5px;
     padding-right: 210.5px;
+    padding-top: 20px;
+    gap: 30px;
   }
   body main .menu .menu__body .command_action {
     padding-bottom: 40px;
+    padding-top: 15px;
   }
 }
 body main .icon-button {
@@ -473,6 +487,7 @@ body main .action_button {
   background: linear-gradient(#FF79DA, #9356DC);
   color: white;
   width: 61%;
+  max-width: 218px;
   height: 50px;
   cursor: pointer;
   overflow: hidden;
@@ -552,7 +567,7 @@ body .footer .footer_list .footer_last_links {
   body .footer .footer_title {
     font-size: 18px;
     font-weight: 400;
-    padding: 0 30px;
+    padding: 0 50px 0 30px;
     height: 27px;
   }
   body .footer .footer_list {
