--- a/css/style.css
+++ b/css/style.css
@@ -193,35 +193,6 @@ body main .fonctionnement .fonctionnement_list li .fa-store {
     width: 100%;
   }
 }
-body main .restaurants {
-  padding: 20px 20px 0 20px;
-  font-family: "Roboto", sans-serif;
-}
-@media screen and (min-width: 1024px) {
-  body main .restaurants {
-    display: flex;
-    justify-content: center;
-    padding: 10px 20px 30px 20px;
-  }
-  body main .restaurants div {
-    max-width: 1080px;
-  }
-  body main .restaurants div .restaurants__cards {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding-top: 10px;
-    gap: 50px;
-  }
-  body main .restaurants div .restaurants__cards .card {
-    min-width: 490px;
-    height: 251px;
-    margin-bottom: 0;
-  }
-  body main .restaurants div .restaurants__cards .card img {
-    height: 181px;
-  }
-}
 body main .card {
   position: relative;
   display: flex;
@@ -231,12 +202,14 @@ body main .card {
   margin-bottom: 20px;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1019607843);
   font-family: "Roboto", sans-serif;
+  max-width: 490px;
 }
 body main .card .card_tag {
   position: absolute;
   background-color: #99E2D0;
   height: 29px;
   width: 24%;
+  max-width: 80px;
   top: 13px;
   right: 13px;
   font-weight: 500;
@@ -287,12 +260,50 @@ body main .card .checkmark {
   height: 100%;
   background-color: #99E2D0;
   text-align: center;
-  transition: width 1s ease-in-out, opacity 1s ease-in-out;
+  transition: width 1.5s ease-in-out, opacity 1s ease-in-out;
   max-width: 59px;
 }
 body main .card .checkmark i {
   color: white;
   font-size: 20px;
+}
+body main .restaurants {
+  padding: 20px 20px 0 20px;
+  font-family: "Roboto", sans-serif;
+}
+@media screen and (min-width: 540px) {
+  body main .restaurants {
+    display: flex;
+    justify-content: center;
+    padding: 10px 20px 30px 20px;
+  }
+  body main .restaurants div {
+    max-width: 1080px;
+  }
+  body main .restaurants div .restaurants__cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-top: 10px;
+    gap: 50px;
+  }
+  body main .restaurants div .restaurants__cards .card {
+    min-width: 490px;
+    height: 251px;
+    margin-bottom: 0;
+  }
+  body main .restaurants div .restaurants__cards .card img {
+    height: 80%;
+  }
+  body main .restaurants div .restaurants__cards .card .card-content {
+    padding: 10px 25px 10px 20px;
+  }
+}
+@media screen and (min-width: 540px) and (max-width: 1069px) {
+  body main .restaurants div .restaurants__cards {
+    display: flex;
+    justify-content: center;
+  }
 }
 body main .menu .menu__header {
   position: relative;
@@ -374,6 +385,7 @@ body main .menu .menu__body .card {
   padding: 0 15px;
   margin-bottom: 0;
   border-radius: 15px;
+  max-width: 634px;
 }
 body main .menu .menu__body .card .card-content {
   padding: 0;
@@ -396,7 +408,7 @@ body main .menu .menu__body .card .card-content .card-txt .card-subtitle {
   text-overflow: ellipsis;
 }
 body main .menu .menu__body .card:hover {
-  padding-right: 25%;
+  padding-right: 70px;
 }
 body main .menu .menu__body .card:hover .card-txt {
   width: 80%;
