--- a/css/style.css
+++ b/css/style.css
@@ -67,16 +67,6 @@ body .header .location span {
   padding-left: 15px;
   font-family: "Roboto", sans-serif;
 }
-@media screen and (min-width: 1024px) {
-  body .header .header__logo {
-    height: 96.34px;
-  }
-  body .header .header__logo img {
-    padding: 0;
-    width: 100%;
-    height: 34.2px;
-  }
-}
 body main {
   background-color: #F6F6F6;
   padding-bottom: 50px;
@@ -84,14 +74,6 @@ body main {
 body main .menu__page__image {
   height: 275px;
   width: 100%;
-}
-@media screen and (min-width: 1024px) {
-  body main .menu__page__image {
-    object-fit: cover;
-    max-width: 1440px;
-    width: 100%;
-    height: 383px;
-  }
 }
 body main .presentation {
   display: flex;
@@ -111,21 +93,6 @@ body main .presentation .presentation__title {
 body main .presentation p {
   font-weight: 300;
   font-size: 18px;
-}
-@media screen and (min-width: 1024px) {
-  body main .presentation br {
-    display: none;
-  }
-  body main .presentation .presentation__title {
-    font-weight: 700;
-    font-size: 40px;
-    height: 47px;
-    margin-top: 0;
-    padding-bottom: 10px;
-  }
-  body main .presentation p {
-    margin-bottom: 10px;
-  }
 }
 body main .fonctionnement {
   padding: 20px;
@@ -174,24 +141,6 @@ body main .fonctionnement .fonctionnement_list li i {
 }
 body main .fonctionnement .fonctionnement_list li .fa-store {
   color: #9356DC;
-}
-@media screen and (min-width: 1024px) {
-  body main .fonctionnement {
-    display: flex;
-    justify-content: center;
-  }
-  body main .fonctionnement div {
-    max-width: 1053px;
-    width: 100%;
-  }
-  body main .fonctionnement div .fonctionnement_list {
-    flex-direction: row;
-    gap: 30px;
-    width: 100%;
-  }
-  body main .fonctionnement div .fonctionnement_list li {
-    width: 100%;
-  }
 }
 body main .card {
   position: relative;
@@ -290,40 +239,6 @@ body main .restaurants {
   padding: 20px 20px 0 20px;
   font-family: "Roboto", sans-serif;
 }
-@media screen and (min-width: 540px) {
-  body main .restaurants {
-    display: flex;
-    justify-content: center;
-    padding: 10px 20px 30px 20px;
-  }
-  body main .restaurants div {
-    max-width: 1080px;
-  }
-  body main .restaurants div .restaurants__cards {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding-top: 10px;
-    gap: 50px;
-  }
-  body main .restaurants div .restaurants__cards .card {
-    min-width: 490px;
-    height: 251px;
-    margin-bottom: 0;
-  }
-  body main .restaurants div .restaurants__cards .card img {
-    height: 80%;
-  }
-  body main .restaurants div .restaurants__cards .card .card-content {
-    padding: 10px 25px 10px 20px;
-  }
-}
-@media screen and (min-width: 540px) and (max-width: 1069px) {
-  body main .restaurants div .restaurants__cards {
-    display: flex;
-    justify-content: center;
-  }
-}
 body main .menu .menu__header {
   position: relative;
   top: -40px;
@@ -341,19 +256,10 @@ body main .menu .menu__header .menu__title {
   font-size: 28px;
   margin: 0;
 }
-body main .menu .menu__header button {
+body main .menu .menu__header .icon-button {
   position: absolute;
   padding-top: 5px;
   right: 40px;
-}
-@media screen and (min-width: 540px) and (max-width: 1023px) {
-  body main .menu .menu__header {
-    justify-content: center;
-  }
-  body main .menu .menu__header button {
-    position: relative;
-    padding-left: 90px;
-  }
 }
 body main .menu .menu__body {
   display: flex;
@@ -458,40 +364,6 @@ body main .menu .menu__body .command_action .action_button {
   padding: 0;
   max-width: 186px;
 }
-@media screen and (min-width: 1024px) {
-  body main .menu {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: white;
-  }
-  body main .menu .menu__container {
-    max-width: 1055px;
-    width: 100%;
-    background-color: #F6F6F6;
-  }
-  body main .menu .menu__header {
-    justify-content: center;
-    padding-top: 50px;
-  }
-  body main .menu .menu__header .menu__title {
-    padding-right: 50px;
-  }
-  body main .menu .menu__header button {
-    position: relative;
-    padding-left: 40px;
-  }
-  body main .menu .menu__body {
-    padding-left: 210.5px;
-    padding-right: 210.5px;
-    padding-top: 20px;
-    gap: 30px;
-  }
-  body main .menu .menu__body .command_action {
-    padding-bottom: 40px;
-    padding-top: 15px;
-  }
-}
 body main .icon-button {
   position: relative;
   background: none;
@@ -555,16 +427,6 @@ body main .action_button div {
   position: relative;
   z-index: 2;
 }
-@media screen and (min-width: 1024px) {
-  body main .action_button {
-    max-width: 218px;
-  }
-}
-@media screen and (min-width: 1024px) {
-  body main {
-    padding-bottom: 0;
-  }
-}
 body .footer {
   background-color: #353535;
   color: white;
@@ -599,7 +461,137 @@ body .footer .footer_list li .fa-handshake-angle {
 body .footer .footer_list .footer_last_links {
   font-weight: 400;
 }
-@media screen and (min-width: 1024px) {
+
+/****** Media queries ***********/
+/* Small & Medium devices (mobiles, tablets, more/equal than 540px) */
+@media screen and (min-width: 540px) {
+  .restaurants {
+    display: flex;
+    justify-content: center;
+    padding: 10px 20px 30px 20px;
+  }
+  .restaurants div {
+    max-width: 1080px;
+  }
+  .restaurants div .restaurants__cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-top: 10px;
+    gap: 50px;
+  }
+  .restaurants div .restaurants__cards .card {
+    min-width: 490px;
+    height: 251px;
+    margin-bottom: 0;
+  }
+  .restaurants div .restaurants__cards .card img {
+    height: 80%;
+  }
+  .restaurants div .restaurants__cards .card .card-content {
+    padding: 10px 25px 10px 20px;
+  }
+}
+/* Small & Medium devices (mobiles, tablets, more/equal than 540px and less/equal than 1023px) */
+@media screen and (min-width: 540px) and (max-width: 1023px) {
+  main .menu .menu__container .menu__header {
+    justify-content: center;
+  }
+  main .menu .menu__container .menu__header .icon-button {
+    position: relative;
+    padding-left: 90px;
+  }
+}
+/* Small & Medium devices (mobiles, tablets, more/equal than 540px and less/equal than 1069px) */
+@media screen and (min-width: 540px) and (max-width: 1069px) {
+  .restaurants div .restaurants__cards {
+    display: flex;
+    justify-content: center;
+  }
+}
+/* Desktop & Medium devices (tablets, more/equal than 1024px) */
+@media (min-width: 1024px) {
+  body .header .header__logo {
+    height: 96.34px;
+  }
+  body .header .header__logo img {
+    padding: 0;
+    width: 100%;
+    height: 34.2px;
+  }
+  body main {
+    padding-bottom: 0;
+  }
+  body main .presentation br {
+    display: none;
+  }
+  body main .presentation .presentation__title {
+    font-weight: 700;
+    font-size: 40px;
+    height: 47px;
+    margin-top: 0;
+    padding-bottom: 10px;
+  }
+  body main .presentation p {
+    margin-bottom: 10px;
+  }
+  body main .fonctionnement {
+    display: flex;
+    justify-content: center;
+  }
+  body main .fonctionnement div {
+    max-width: 1053px;
+    width: 100%;
+  }
+  body main .fonctionnement div .fonctionnement_list {
+    flex-direction: row;
+    gap: 30px;
+    width: 100%;
+  }
+  body main .fonctionnement div .fonctionnement_list li {
+    width: 100%;
+  }
+  body main .menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+  }
+  body main .menu .menu__page__image {
+    object-fit: cover;
+    max-width: 1440px;
+    width: 100%;
+    height: 383px;
+  }
+  body main .menu .menu__container {
+    max-width: 1055px;
+    width: 100%;
+    background-color: #F6F6F6;
+  }
+  body main .menu .menu__header {
+    justify-content: center;
+    padding-top: 50px;
+  }
+  body main .menu .menu__header .menu__title {
+    padding-right: 50px;
+  }
+  body main .menu .menu__header .icon-button {
+    position: relative;
+    padding-left: 40px;
+  }
+  body main .menu .menu__body {
+    padding-left: 210.5px;
+    padding-right: 210.5px;
+    padding-top: 20px;
+    gap: 30px;
+  }
+  body main .menu .menu__body .command_action {
+    padding-bottom: 40px;
+    padding-top: 15px;
+  }
+  body main .action_button {
+    max-width: 218px;
+  }
   body .footer {
     display: flex;
     justify-content: right;
