--- a/css/style.scss
+++ b/css/style.scss
@@ -78,35 +78,15 @@ body {
             }
         }
 
-        @media screen and (min-width: 1024px) {
-            .header__logo {
-                height: 96.34px;
-                
-                img {
-                    padding: 0;
-                    width: 100%;
-                    height: 34.2px;
-                }
-            }
-        }
-
     }
     
     main {
-        // position: relative;
         background-color: #F6F6F6;
         padding-bottom: 50px;
         
         .menu__page__image {
             height: 275px;
             width: 100%;
-    
-            @media screen and (min-width: 1024px) {
-                object-fit: cover;
-                max-width: 1440px;
-                width: 100%;
-                height: 383px;
-            }
         }
 
         .presentation {
@@ -129,26 +109,6 @@ body {
                 font-weight: 300;
                 font-size: 18px;
             }
-
-            @media screen and (min-width: 1024px) {
-                br {
-                    display: none;
-                }
-
-                .presentation__title {
-                    font-weight: 700;
-                    font-size: 40px;
-                    height: 47px;
-                    margin-top: 0;
-                    padding-bottom: 10px;
-                }
-
-                p {
-                    margin-bottom: 10px;
-                }
-
-            }
-
         }
 
         .fonctionnement{
@@ -209,22 +169,6 @@ body {
             
             }
 
-            @media screen and (min-width: 1024px) {
-                display: flex;
-                justify-content: center;
-                div {
-                    max-width: 1053px;
-                    width: 100%;
-                    .fonctionnement_list {
-                        flex-direction: row;
-                        gap: 30px;
-                        width: 100%;
-                        li {
-                            width: 100%;
-                        }
-                    }
-                }
-            }
         }
 
         
@@ -233,7 +177,6 @@ body {
             display: flex;
             flex-direction: column;
             border-radius: 20px;
-            // filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
             background-color: white;
             margin-bottom: 20px;
             box-shadow: 0px 4px 15px 0px #0000001A;
@@ -326,49 +269,7 @@ body {
         .restaurants {
             padding: 20px 20px 0 20px;
             font-family: 'Roboto', sans-serif;
-
-            @media screen and (min-width: 540px) {
-                display: flex;
-                justify-content: center;
-                padding: 10px 20px 30px 20px;
-
-                div {
-                    max-width: 1080px;
-                    .restaurants__cards {
-                        display: flex;
-                        flex-wrap: wrap;
-                        justify-content: space-between;
-                        padding-top: 10px;
-                        gap: 50px;
-                        .card {
-                            min-width: 490px;
-                            height: 251px;
-                            margin-bottom: 0;
-
-                            img {
-                                height: 80%;
-                            }
-
-                            .card-content {
-                                padding: 10px 25px 10px 20px;
-                            }
-                        }
-                    }
-                }
-            }
-
-            @media screen and (min-width: 540px) and (max-width: 1069px) {
-                div {
-                    .restaurants__cards {
-                        display: flex;
-                        justify-content: center;
-                    }
-                }
-
-            }
-
         }
-
 
         .menu {
 
@@ -390,31 +291,17 @@ body {
                     margin: 0;
                 }
     
-                button {
+                .icon-button {
                     position: absolute;
                     padding-top: 5px;
                     right: 40px;
                 }
-
-                @media screen and (min-width: 540px) and (max-width: 1023px) {
-                    justify-content: center;
-
-                    button {
-                        position: relative;
-                        padding-left: 90px;
-                    }
-
-                }
-
             }
     
             .menu__body {
-                // position: relative;
-                // top : -50px;
                 display: flex;
                 flex-direction: column;
                 padding: 0 13px;
-                // border-radius: 40px;
                 background-color: #F6F6F6;
                 gap: 40px;
                 
@@ -522,46 +409,6 @@ body {
                     }
                 }            
             }
-
-            @media screen and (min-width: 1024px) {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                background-color: white;
-
-                .menu__container {
-                    max-width: 1055px;
-                    width: 100%;
-                    background-color: #F6F6F6;
-                }
-
-                .menu__header {
-                    justify-content: center;
-                    padding-top: 50px;
-
-                    .menu__title {
-                        padding-right: 50px;
-                    }
-
-                    button {
-                        position: relative;
-                        padding-left: 40px;
-                    }
-                }
-
-                .menu__body{
-                    padding-left: 210.5px;
-                    padding-right: 210.5px;
-                    padding-top: 20px;
-                    gap: 30px;
-
-                    .command_action{
-                        padding-bottom: 40px;
-                        padding-top: 15px;
-                    }
-
-                }
-            }
         }
 
 
@@ -641,14 +488,6 @@ body {
                 position: relative;
                 z-index: 2;
             }
-
-            @media screen and (min-width: 1024px) {
-                max-width: 218px;
-            }
-        }
-
-        @media screen and (min-width: 1024px) {
-            padding-bottom: 0;
         }
         
     }
@@ -691,8 +530,185 @@ body {
                 font-weight: 400;
             }
         }
+    }
+    
+}
 
-        @media screen and (min-width: 1024px) {
+/****** Media queries ***********/
+
+/* Small & Medium devices (mobiles, tablets, more/equal than 540px) */
+@media screen and (min-width: 540px) {
+    .restaurants {
+        display: flex;
+        justify-content: center;
+        padding: 10px 20px 30px 20px;
+    
+        div {
+            max-width: 1080px;
+            .restaurants__cards {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
+                padding-top: 10px;
+                gap: 50px;
+                .card {
+                    min-width: 490px;
+                    height: 251px;
+                    margin-bottom: 0;
+    
+                    img {
+                        height: 80%;
+                    }
+    
+                    .card-content {
+                        padding: 10px 25px 10px 20px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+/* Small & Medium devices (mobiles, tablets, more/equal than 540px and less/equal than 1023px) */
+@media screen and (min-width: 540px) and (max-width: 1023px) {
+    main {
+        .menu {
+            .menu__container {
+                .menu__header {
+                    justify-content: center;
+                
+                    .icon-button {
+                        position: relative;
+                        padding-left: 90px;
+                    }
+                }
+            }
+        }
+    }
+
+}
+
+/* Small & Medium devices (mobiles, tablets, more/equal than 540px and less/equal than 1069px) */
+@media screen and (min-width: 540px) and (max-width: 1069px) {
+    .restaurants {
+        div {
+            .restaurants__cards {
+                display: flex;
+                justify-content: center;
+            }
+        }
+    }
+}
+
+/* Desktop & Medium devices (tablets, more/equal than 1024px) */
+@media (min-width: 1024px) {
+    body {
+        .header{
+            .header__logo {
+                height: 96.34px;
+                
+                img {
+                    padding: 0;
+                    width: 100%;
+                    height: 34.2px;
+                }
+            }
+        }
+
+        main {
+            padding-bottom: 0;
+
+            .presentation {
+                    
+                br {
+                    display: none;
+                }
+    
+                .presentation__title {
+                    font-weight: 700;
+                    font-size: 40px;
+                    height: 47px;
+                    margin-top: 0;
+                    padding-bottom: 10px;
+                }
+
+                p {
+                    margin-bottom: 10px;
+                }
+            }
+
+            .fonctionnement {
+                display: flex;
+                justify-content: center;
+                div {
+                    max-width: 1053px;
+                    width: 100%;
+                    .fonctionnement_list {
+                        flex-direction: row;
+                        gap: 30px;
+                        width: 100%;
+                        li {
+                            width: 100%;
+                        }
+                    }
+                }
+            }
+
+            .menu {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                background-color: white;
+
+                .menu__page__image {
+                        object-fit: cover;
+                        max-width: 1440px;
+                        width: 100%;
+                        height: 383px;
+                }
+
+
+                .menu__container {
+                    max-width: 1055px;
+                    width: 100%;
+                    background-color: #F6F6F6;
+                }
+
+                .menu__header {
+                    justify-content: center;
+                    padding-top: 50px;
+
+                    .menu__title {
+                        padding-right: 50px;
+                    }
+
+                    .icon-button {
+                        position: relative;
+                        padding-left: 40px;
+                    }
+                }
+
+                .menu__body{
+                    padding-left: 210.5px;
+                    padding-right: 210.5px;
+                    padding-top: 20px;
+                    gap: 30px;
+
+                    .command_action{
+                        padding-bottom: 40px;
+                        padding-top: 15px;
+                    }
+
+                }
+            }
+
+            .action_button {
+                max-width: 218px;
+            }
+
+        }
+
+        .footer {
             display: flex;
             justify-content: right;
             flex-direction: row-reverse;
@@ -733,7 +749,6 @@ body {
             }
         }
     }
-    
 }
 
 
