save start sass 7:1

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -550,7 +550,9 @@ body {
                 flex-wrap: wrap;
                 justify-content: space-between;
                 padding-top: 10px;
+                padding-bottom: 30px;
                 gap: 50px;
+
                 .card {
                     min-width: 490px;
                     height: 251px;
