--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,11 +1,9 @@
-// // Utils
-// @import 'utils/variables';
-// @import 'utils/functions';
-// @import 'utils/mixins';
+// Utils
+@import 'utils/variables';
 
 // Base
 @import 'base/body';
-// @import 'base/typography';
+@import 'base/fonts';
 
 // Layout
 @import 'layout/header';
@@ -15,531 +13,15 @@
 // Components
 @import 'components/card';
 @import 'components/menu';
-// @import 'components/icons';
+@import 'components/like_icon';
+@import 'components/action_button';
 
-// // Pages
-// @import 'pages/home';
-// @import 'pages/about';
-// @import 'pages/contact';
-
-// // Themes
-// @import 'themes/theme1';
-// @import 'themes/theme2';
-
-// // Vendors
-// @import 'vendors/bootstrap';
-
-/****** General ***********/
-
-body {
-
-    .loading {
-        width: 100%;
-        height: 100%;
-        position: fixed;
-        top: 0;
-        left: 0;
-        background-color: #fff;
-        z-index: 9999;
-        animation: fadeOut 3s;
-        animation-fill-mode: forwards;
-    
-        .loading-image {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-
-        @keyframes fadeOut {
-            100% {
-              opacity: 0;
-              visibility: hidden;
-            }
-        }
-    }  
-    
-    main {       
-        
-
-        .presentation {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            font-family: 'Roboto', sans-serif;
-            text-align: center;
-            padding: 20px 0;
-
-            .presentation__title {
-                height: 68px;
-                width: 73%;
-                margin-bottom: 0;
-                font-weight: 700;
-                font-size: 24px;
-            }
-
-            p {
-                font-weight: 300;
-                font-size: 18px;
-            }
-        }
-
-        .fonctionnement{
-            padding: 20px;
-            background-color: white;
-            font-family: 'Roboto', sans-serif;
-            .fonctionnement_list {
-                margin-left: 10px;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-
-                li {
-                    position: relative;
-                    display: flex;
-                    width: 96%;
-                    height: 72.38px;
-                    border-radius: 20px;
-                    align-items: center;
-                    background-color: #F6F6F6;
-                    font-weight: 500;
-                    font-size: 16px;
-                    margin-bottom: 20px;
-                    box-shadow: 0px 4px 15px 0px #00000026;
-
-                    span {
-                        position: absolute;
-                        display: flex;
-                        justify-content: center;
-                        width: 24px;
-                        height: 24px;
-                        border-radius: 50%;
-                        background-color: #9356DC;
-                        color: white;
-                        text-align: center;
-                        left: -10px;
-                        font-size: 14.18px;
-                        line-height: 26.62px;
-                    }
-
-                    i {
-                        position: relative;
-                        padding: 0 25px 0 40px;
-                        color: #7E7E7E;
-                        font-size: 19px;
-                        top : -3px;
-                    }
-                    
-                    .fa-store {
-                        color: #9356DC;
-
-                    }
-                    
-
-                }
-
-                
-            
-            }
-
-        }
+// Pages
+@import 'pages/restaurants';
+@import 'pages/loading';
+@import 'pages/presentation';
+@import 'pages/fonctionnement';
 
 
-        .restaurants {
-            padding: 20px 20px 0 20px;
-            font-family: 'Roboto', sans-serif;
-        }
-
-        // .menu {
-
-        //     .menu__page__image {
-        //         height: 275px;
-        //         width: 100%;
-        //     }
-
-        //     .menu__header {
-        //         position: relative;
-        //         top: -40px;
-        //         background-color: #F6F6F6;
-        //         border-top-right-radius: 40px;
-        //         border-top-left-radius: 40px;
-        //         display: flex;
-        //         padding-left: 13px;
-        //         padding-top: 30px;
-        //         height: 10px;
-
-        //         .menu__title {
-        //             font-family: 'Shrikhand';
-        //             font-weight: 400;
-        //             font-size: 28px;
-        //             margin: 0;
-        //         }
-    
-        //         .icon-button {
-        //             position: absolute;
-        //             padding-top: 5px;
-        //             right: 40px;
-        //         }
-        //     }
-    
-        //     .menu__body {
-        //         display: flex;
-        //         flex-direction: column;
-        //         padding: 0 13px;
-        //         background-color: #F6F6F6;
-        //         gap: 40px;
-                
-        //         > * { 
-        //             opacity: 0;
-            
-        //             @for $i from 1 through 4 {
-        //                 &:nth-child(#{$i}) {
-        //                   animation: fadeIn 3s ease-in-out #{0.4 * $i}s forwards;
-        //                 }
-        //             }
-        //         }
-              
-        //         @keyframes fadeIn {
-        //             0% { opacity: 0; }
-        //             100% { opacity: 1; }
-        //         }
-    
-        //         section {
-        //             display: flex;
-        //             flex-direction: column;
-        //             gap: 12px;
-                    
-        //             .section_title{
-        //                 position: relative;
-        //                 font-family: 'Roboto', sans-serif;
-        //                 font-weight: 300;
-        //                 font-size: 16px;
-        //                 padding-bottom: 10px;
-        //                 margin-bottom: 0;
-        
-        //                 &::after {
-        //                     content: '';
-        //                     position: absolute;
-        //                     left: 0;
-        //                     bottom: 0;
-        //                     width: 40px; 
-        //                     height: 3px; 
-        //                     background-color: #99E2D0;
-        //                   }
-        //             }
-        //         }
-    
-    
-        //         .card {
-        //             padding-right: 5px;
-        //             transition: padding-right 1s ease-in-out;
-        //             height: 69px;
-        //             justify-content: center;
-        //             padding: 0 15px;
-        //             margin-bottom: 0;
-        //             border-radius:  15px;
-        //             max-width: 634px;
-    
-        //             .card-content {
-        //                 padding: 0;
-    
-        //                 .card-txt {
-        //                     transition: width 1s ease-in-out;
-        //                     width: 100%;
-    
-        //                     .card-title {
-        //                         font-weight: 500;
-        //                         white-space: nowrap;
-        //                         overflow: hidden;
-        //                         text-overflow: ellipsis;
-        //                     }
-            
-        //                     .card-subtitle {
-        //                         font-weight: 300;
-        //                         font-size: 15px;
-        //                         white-space: nowrap;
-        //                         overflow: hidden;
-        //                         text-overflow: ellipsis;
-        //                     }
-        //                 }
-        //             }
-    
-    
-        //             &:hover {
-        //                 padding-right: 70px;
-    
-        //                 .card-txt {
-        //                     width: 80%;
-        //                 }
-                        
-        //                 .checkmark {
-        //                     animation: checkmark-in 2.5s forwards;
-        //                     max-width: 59px;
-        //                 }
-        //             }
-
-        //         }
-    
-        //         .command_action {
-        //             display: flex;
-        //             justify-content: center;
-    
-        //             .action_button {
-        //                 margin: 0;
-        //                 width: 53%;
-        //                 height: 50px;
-        //                 padding: 0;
-        //                 max-width: 186px;
-        //             }
-        //         }            
-        //     }
-        // }
-
-
-
-
-
-        .icon-button {
-            position: relative;
-            background: none;
-            border: none;
-            padding: 0;
-            font: inherit;
-            cursor: pointer;
-            outline: inherit;
-
-            .icon-default, .icon-hover {
-                position: absolute;
-                right: 0;
-                transition: opacity 2s;
-                font-size: 22px;
-                -webkit-text-stroke: 1px white;
-            }
-
-            .icon-hover {
-                opacity: 0;
-                background: linear-gradient(#9356DC, #FF79DA);
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
-            }
-
-            &:hover {
-                .icon-default {
-                    opacity: 0;
-                }
-
-                .icon-hover {
-                    opacity: 1;
-
-                }
-            }
-        }
-
-        .action_button {
-            position: relative;
-            height: 50px;
-            margin: 20px;
-            border: none;
-            border-radius: 25px;
-            font-weight: 500;
-            font-size: 16px;
-            font-family: 'Roboto', sans-serif;
-            background: linear-gradient(#FF79DA,#9356DC);
-            color: white;
-            width: 61%;
-            max-width: 218px;
-            height: 50px;
-            cursor: pointer;
-            overflow: hidden;
-
-            &:before {
-                content: "";
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                background: linear-gradient(lighten(#FF79DA, 10%), lighten(#9356DC, 15%));
-                opacity: 0;
-                transition: opacity 1s ease-in-out;
-            }
-        
-            &:hover:before {
-                opacity: 1;
-            }
-
-            div {
-                position: relative;
-                z-index: 2;
-            }
-        }
-        
-    }
-}
-
-/****** Media queries ***********/
-
-/* Small & Medium devices (mobiles, tablets, more/equal than 540px) */
-@media screen and (min-width: 540px) {
-    .restaurants {
-        display: flex;
-        justify-content: center;
-        padding: 10px 20px 30px 20px;
-    
-        div {
-            max-width: 1080px;
-            
-            .restaurants__cards {
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: space-between;
-                padding-top: 10px;
-                padding-bottom: 30px;
-                gap: 50px;
-
-                .card {
-                    min-width: 490px;
-                    height: 251px;
-                    margin-bottom: 0;
-    
-                    img {
-                        height: 80%;
-                    }
-    
-                    .card-content {
-                        padding: 10px 25px 10px 20px;
-                    }
-                }
-            }
-        }
-    }
-}
-
-// /* Small & Medium devices (mobiles, tablets, more/equal than 540px and less/equal than 1023px) */
-// @media screen and (min-width: 540px) and (max-width: 1023px) {
-//     main {
-//         .menu {
-//             .menu__container {
-//                 .menu__header {
-//                     justify-content: center;
-                
-//                     .icon-button {
-//                         position: relative;
-//                         padding-left: 90px;
-//                     }
-//                 }
-//             }
-//         }
-//     }
-
-// }
-
-/* Small & Medium devices (mobiles, tablets, more/equal than 540px and less/equal than 1069px) */
-@media screen and (min-width: 540px) and (max-width: 1069px) {
-    .restaurants {
-        div {
-            .restaurants__cards {
-                display: flex;
-                justify-content: center;
-            }
-        }
-    }
-}
-
-/* Desktop & Medium devices (tablets, more/equal than 1024px) */
-@media (min-width: 1024px) {
-    body {
-        main {
-            .presentation {
-                    
-                br {
-                    display: none;
-                }
-    
-                .presentation__title {
-                    font-weight: 700;
-                    font-size: 40px;
-                    height: 47px;
-                    margin-top: 0;
-                    padding-bottom: 10px;
-                }
-
-                p {
-                    margin-bottom: 10px;
-                }
-            }
-
-            .fonctionnement {
-                display: flex;
-                justify-content: center;
-                div {
-                    max-width: 1053px;
-                    width: 100%;
-                    .fonctionnement_list {
-                        flex-direction: row;
-                        gap: 30px;
-                        width: 100%;
-                        li {
-                            width: 100%;
-                        }
-                    }
-                }
-            }
-
-            // .menu {
-            //     display: flex;
-            //     flex-direction: column;
-            //     align-items: center;
-            //     background-color: white;
-
-            //     .menu__page__image {
-            //             object-fit: cover;
-            //             max-width: 1440px;
-            //             width: 100%;
-            //             height: 383px;
-            //     }
-
-
-            //     .menu__container {
-            //         max-width: 1055px;
-            //         width: 100%;
-            //         background-color: #F6F6F6;
-            //     }
-
-            //     .menu__header {
-            //         justify-content: center;
-            //         padding-top: 50px;
-
-            //         .menu__title {
-            //             padding-right: 50px;
-            //         }
-
-            //         .icon-button {
-            //             position: relative;
-            //             padding-left: 40px;
-            //         }
-            //     }
-
-            //     .menu__body{
-            //         padding-left: 210.5px;
-            //         padding-right: 210.5px;
-            //         padding-top: 20px;
-            //         gap: 30px;
-
-            //         .command_action{
-            //             padding-bottom: 40px;
-            //             padding-top: 15px;
-            //         }
-
-            //     }
-            // }
-
-            .action_button {
-                max-width: 218px;
-            }
-
-        }
-    }
-}
 
 
