--- a/sass/style.css
+++ b/sass/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 body {
   margin: 0;
 }
@@ -8,6 +10,18 @@ body ul {
 body a {
   text-decoration: none;
   color: inherit;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+}
+
+.menu__title {
+  font-family: "Shrikhand";
+}
+
+.footer_title {
+  font-family: "Shrikhand";
 }
 
 .header {
@@ -42,7 +56,6 @@ body a {
 }
 .header .location span {
   padding-left: 15px;
-  font-family: "Roboto", sans-serif;
 }
 
 @media (min-width: 1024px) {
@@ -69,7 +82,6 @@ body a {
   padding: 0 25px;
 }
 .footer .footer_title {
-  font-family: "Shrikhand";
   font-size: 18px;
   font-weight: 400;
   padding: 20px 0;
@@ -83,7 +95,6 @@ body a {
   padding-bottom: 15px;
   font-weight: 500;
   font-size: 16px;
-  font-family: "Roboto", sans-serif;
 }
 .footer .footer_list li i {
   padding-right: 10px;
@@ -151,7 +162,6 @@ main {
   background-color: white;
   margin-bottom: 20px;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1019607843);
-  font-family: "Roboto", sans-serif;
   max-width: 490px;
 }
 .card .card_tag {
@@ -209,12 +219,11 @@ main {
   height: 10px;
 }
 .menu .menu__header .menu__title {
-  font-family: "Shrikhand";
   font-weight: 400;
   font-size: 28px;
   margin: 0;
 }
-.menu .menu__header .icon-button {
+.menu .menu__header .like_icon {
   position: absolute;
   padding-top: 5px;
   right: 40px;
@@ -256,7 +265,6 @@ main {
 }
 .menu .menu__body section .section_title {
   position: relative;
-  font-family: "Roboto", sans-serif;
   font-weight: 300;
   font-size: 16px;
   padding-bottom: 10px;
@@ -311,14 +319,13 @@ main {
   font-size: 20px;
 }
 .menu .menu__body .card {
-  padding-right: 5px;
-  transition: padding-right 1s ease-in-out;
   height: 69px;
   justify-content: center;
   padding: 0 15px;
   margin-bottom: 0;
   border-radius: 15px;
   max-width: 634px;
+  transition: padding-right 1s ease-in-out;
 }
 .menu .menu__body .card .card-content {
   padding: 0;
@@ -372,14 +379,20 @@ main {
   .menu .menu__container .menu__header {
     justify-content: center;
   }
-  .menu .menu__container .menu__header .icon-button {
+  .menu .menu__container .menu__header .like_icon {
     position: relative;
     padding-left: 90px;
   }
 }
 @media screen and (min-width: 690px) and (max-width: 1023px) {
+  .menu .menu__body .card .card-price {
+    transition: padding-right 1s ease-in-out;
+  }
   .menu .menu__body .card:hover {
     padding-right: 16px;
+  }
+  .menu .menu__body .card:hover .card-price {
+    padding-right: 60px;
   }
 }
 @media (min-width: 1024px) {
@@ -407,7 +420,7 @@ main {
   .menu .menu__header .menu__title {
     padding-right: 50px;
   }
-  .menu .menu__header .icon-button {
+  .menu .menu__header .like_icon {
     position: relative;
     padding-left: 40px;
   }
@@ -422,102 +435,7 @@ main {
     padding-top: 15px;
   }
 }
-/****** General ***********/
-body .loading {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: #fff;
-  z-index: 9999;
-  animation: fadeOut 3s;
-  animation-fill-mode: forwards;
-}
-body .loading .loading-image {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-@keyframes fadeOut {
-  100% {
-    opacity: 0;
-    visibility: hidden;
-  }
-}
-body main .presentation {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-family: "Roboto", sans-serif;
-  text-align: center;
-  padding: 20px 0;
-}
-body main .presentation .presentation__title {
-  height: 68px;
-  width: 73%;
-  margin-bottom: 0;
-  font-weight: 700;
-  font-size: 24px;
-}
-body main .presentation p {
-  font-weight: 300;
-  font-size: 18px;
-}
-body main .fonctionnement {
-  padding: 20px;
-  background-color: white;
-  font-family: "Roboto", sans-serif;
-}
-body main .fonctionnement .fonctionnement_list {
-  margin-left: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-body main .fonctionnement .fonctionnement_list li {
-  position: relative;
-  display: flex;
-  width: 96%;
-  height: 72.38px;
-  border-radius: 20px;
-  align-items: center;
-  background-color: #F6F6F6;
-  font-weight: 500;
-  font-size: 16px;
-  margin-bottom: 20px;
-  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1490196078);
-}
-body main .fonctionnement .fonctionnement_list li span {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  width: 24px;
-  height: 24px;
-  border-radius: 50%;
-  background-color: #9356DC;
-  color: white;
-  text-align: center;
-  left: -10px;
-  font-size: 14.18px;
-  line-height: 26.62px;
-}
-body main .fonctionnement .fonctionnement_list li i {
-  position: relative;
-  padding: 0 25px 0 40px;
-  color: #7E7E7E;
-  font-size: 19px;
-  top: -3px;
-}
-body main .fonctionnement .fonctionnement_list li .fa-store {
-  color: #9356DC;
-}
-body main .restaurants {
-  padding: 20px 20px 0 20px;
-  font-family: "Roboto", sans-serif;
-}
-body main .icon-button {
+.like_icon {
   position: relative;
   background: none;
   border: none;
@@ -526,26 +444,27 @@ body main .icon-button {
   cursor: pointer;
   outline: inherit;
 }
-body main .icon-button .icon-default, body main .icon-button .icon-hover {
+.like_icon .icon-default, .like_icon .icon-hover {
   position: absolute;
   right: 0;
   transition: opacity 2s;
   font-size: 22px;
   -webkit-text-stroke: 1px white;
 }
-body main .icon-button .icon-hover {
+.like_icon .icon-hover {
   opacity: 0;
   background: linear-gradient(#9356DC, #FF79DA);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-body main .icon-button:hover .icon-default {
+.like_icon:hover .icon-default {
   opacity: 0;
 }
-body main .icon-button:hover .icon-hover {
+.like_icon:hover .icon-hover {
   opacity: 1;
 }
-body main .action_button {
+
+.action_button {
   position: relative;
   height: 50px;
   margin: 20px;
@@ -553,7 +472,6 @@ body main .action_button {
   border-radius: 25px;
   font-weight: 500;
   font-size: 16px;
-  font-family: "Roboto", sans-serif;
   background: linear-gradient(#FF79DA, #9356DC);
   color: white;
   width: 61%;
@@ -562,7 +480,7 @@ body main .action_button {
   cursor: pointer;
   overflow: hidden;
 }
-body main .action_button:before {
+.action_button:before {
   content: "";
   position: absolute;
   top: 0;
@@ -573,12 +491,23 @@ body main .action_button:before {
   opacity: 0;
   transition: opacity 1s ease-in-out;
 }
-body main .action_button:hover:before {
+.action_button:hover:before {
   opacity: 1;
 }
-body main .action_button div {
+.action_button div {
   position: relative;
   z-index: 2;
+}
+
+/****** Media queries ***********/
+/* Desktop & Medium devices (tablets, more/equal than 1024px) */
+@media (min-width: 1024px) {
+  .action_button {
+    max-width: 218px;
+  }
+}
+.restaurants {
+  padding: 20px 20px 0 20px;
 }
 
 /****** Media queries ***********/
@@ -619,39 +548,132 @@ body main .action_button div {
     justify-content: center;
   }
 }
+.loading {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+  z-index: 9999;
+  animation: fadeOut 3s;
+  animation-fill-mode: forwards;
+}
+.loading .loading-image {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+@keyframes fadeOut {
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+.presentation {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 20px 0;
+}
+.presentation .presentation__title {
+  height: 68px;
+  width: 73%;
+  margin-bottom: 0;
+  font-weight: 700;
+  font-size: 24px;
+}
+.presentation p {
+  font-weight: 300;
+  font-size: 18px;
+}
+
+/****** Media queries ***********/
 /* Desktop & Medium devices (tablets, more/equal than 1024px) */
 @media (min-width: 1024px) {
-  body main .presentation br {
+  .presentation br {
     display: none;
   }
-  body main .presentation .presentation__title {
+  .presentation .presentation__title {
     font-weight: 700;
     font-size: 40px;
     height: 47px;
     margin-top: 0;
     padding-bottom: 10px;
   }
-  body main .presentation p {
+  .presentation p {
     margin-bottom: 10px;
   }
-  body main .fonctionnement {
+}
+.fonctionnement {
+  padding: 20px;
+  background-color: white;
+}
+.fonctionnement .fonctionnement_list {
+  margin-left: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.fonctionnement .fonctionnement_list li {
+  position: relative;
+  display: flex;
+  width: 96%;
+  height: 72.38px;
+  border-radius: 20px;
+  align-items: center;
+  background-color: #F6F6F6;
+  font-weight: 500;
+  font-size: 16px;
+  margin-bottom: 20px;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1490196078);
+}
+.fonctionnement .fonctionnement_list li span {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: #9356DC;
+  color: white;
+  text-align: center;
+  left: -10px;
+  font-size: 14.18px;
+  line-height: 26.62px;
+}
+.fonctionnement .fonctionnement_list li i {
+  position: relative;
+  padding: 0 25px 0 40px;
+  color: #7E7E7E;
+  font-size: 19px;
+  top: -3px;
+}
+.fonctionnement .fonctionnement_list li .fa-store {
+  color: #9356DC;
+}
+
+/****** Media queries ***********/
+/* Desktop & Medium devices (tablets, more/equal than 1024px) */
+@media (min-width: 1024px) {
+  .fonctionnement {
     display: flex;
     justify-content: center;
   }
-  body main .fonctionnement div {
+  .fonctionnement div {
     max-width: 1053px;
     width: 100%;
   }
-  body main .fonctionnement div .fonctionnement_list {
+  .fonctionnement div .fonctionnement_list {
     flex-direction: row;
     gap: 30px;
     width: 100%;
   }
-  body main .fonctionnement div .fonctionnement_list li {
+  .fonctionnement div .fonctionnement_list li {
     width: 100%;
-  }
-  body main .action_button {
-    max-width: 218px;
   }
 }
 
